--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,53 @@
-*{
+/* general */
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: "open-sans", serif;
+    text-decoration: none;
+}
+
+
+
+
+
+/* header */
+
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+#nav-menu {
+    padding: 25px 10px;
+    
+}
+
+#nav-menu > a,img {
+    padding: 0 15px;
+    font-size: 20px;
+    vertical-align: top;
+    color: rgb(130,130,130);
+}
+
+#sp-nav {
+    background-color: rgb(0,97,255);
+    padding: 5px 10px;
+    color: white;
+    font-size: 20px;
+}
+
+
+
+
+/* debug */
+
+nav{
+    /* background-color: red; */
+}
+
+img {
+    /* height: 100px;
+    padding: 20px 0; */
+
 }
