--- a/css/style.css
+++ b/css/style.css
@@ -3,51 +3,111 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: "open-sans", serif;
+    font-family: 'Open Sans', sans-serif;
     text-decoration: none;
+    border: none;
 }
 
-
-
-
-
-/* header */
-
-nav {
-    display: flex;
-    justify-content: space-between;
-}
-
-#nav-menu {
-    padding: 25px 10px;
-    
-}
-
-#nav-menu > a,img {
-    padding: 0 15px;
-    font-size: 20px;
-    vertical-align: top;
-    color: rgb(130,130,130);
-}
-
-#sp-nav {
+.button {
     background-color: rgb(0,97,255);
     padding: 5px 10px;
     color: white;
     font-size: 20px;
 }
 
+.flex {
+    display: flex;
+}
+
+
+
+
+/* header */
+
+    /* navigator */
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 10;
+        width: 100vw;
+        background-color: white;
+    }
+
+    #nav-menu {
+        padding: 20px 10px;
+        
+    }
+
+    #nav-menu > a,img {
+        display: inline-block;
+        padding: 5px 15px;
+        font-size: 18px;
+        font-weight: 600;
+        vertical-align: top;
+        color: rgb(65,65,65);
+    }
+
+    #nav-menu > button {
+        margin-right: 20px;
+    }
+
+    button > a {
+        color: white;
+    }
+
+    /* jumbo */
+
+    #jumbo-contain {
+        margin-top: 80px;
+        background-color: rgb(180,208,231);
+    }
+
+
+
+
+/* main */
+
+#main-container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+#sct-2-l {
+    width: 40rem;
+}
+
+#sct-2-r {
+    padding: 20px;
+}
+
+#sct-2-r h2 {
+    font-size: 25px;
+    font-weight: 900;
+    padding: 20px 0;
+}
+
+#sct-2-r button {
+    background-color: white;
+    border: 1px solid black;
+    padding: 15px 20px;
+    font-size: 18px;
+    margin-top: 30px;
+}
+
+
+
+
+
 
 
 
 /* debug */
 
-nav{
-    /* background-color: red; */
+.img-prov {
+    width: 500px;
 }
 
-img {
-    /* height: 100px;
-    padding: 20px 0; */
-
-}
