--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,9 @@
 
 .button {
     background-color: rgb(0,97,255);
-    padding: 5px 10px;
+    padding: 10px 15px;
     color: white;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .flex {
@@ -24,47 +24,87 @@
 
 /* header */
 
-    /* navigator */
+/* navigator */
 
-    nav {
-        display: flex;
-        justify-content: space-between;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 10;
-        width: 100vw;
-        background-color: white;
-    }
+nav {
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100vw;
+    background-color: white;
+}
 
-    #nav-menu {
-        padding: 20px 10px;
-        
-    }
+#nav-menu {
+    padding: 20px 10px;
+    
+}
 
-    #nav-menu > a,img {
-        display: inline-block;
-        padding: 5px 15px;
-        font-size: 18px;
-        font-weight: 600;
-        vertical-align: top;
-        color: rgb(65,65,65);
-    }
+#nav-menu > a,img {
+    display: inline-block;
+    padding: 5px 15px;
+    font-size: 16px;
+    font-weight: 400;
+    vertical-align: top;
+    color: rgb(65,65,65);
+}
 
-    #nav-menu > button {
-        margin-right: 20px;
-    }
+#nav-menu > button {
+    margin-right: 20px;
+}
 
-    button > a {
-        color: white;
-    }
+button > a {
+    color: white;
+}
 
-    /* jumbo */
 
-    #jumbo-contain {
-        margin-top: 80px;
-        background-color: rgb(180,208,231);
-    }
+
+
+
+
+/* jumbo */
+
+#jumbo-contain {
+    width: 100vw;
+    padding: 0 20%;
+    margin-top: 80px;
+    background-color: rgb(180,208,231);
+
+}
+
+#jumbo-contain > h1 {
+    font-size: 70px;
+    font-weight: 900;
+    padding-top: 70px;
+    padding-bottom: 30px;
+}
+
+#jumbo-left > p {
+    padding-bottom: 20px;
+}
+
+#jumbo-left span {
+    display: block;
+    margin: 40px 0;
+}
+
+.dwn-arw-jmb {
+    font-size: 60px;
+    padding-top: 20px;
+}
+
+#jumb-img {
+    width: 50rem;
+}
+
+
+
+
+
+
+
 
 
 
@@ -76,6 +116,11 @@
     margin: 0 auto;
 }
 
+
+
+
+
+/* section 2 */
 #sct-2-l {
     width: 40rem;
 }
@@ -107,7 +152,7 @@
 
 /* debug */
 
-.img-prov {
+/* .img-prov {
     width: 500px;
-}
+} */
 
