css_main-section-7-update

--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,14 @@ button > a {
     border-collapse: collapse;
 }
 
+.sct-7-menu > p {
+    font-weight: bold;
+}
+
+.sct-7-menu > span {
+    padding-right: 30px;
+}
+
 
 
 
